# ChangeLog for app-misc/linuxspa
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/linuxspa/ChangeLog,v 1.4 2007/05/14 16:47:40 bangert Exp $

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  11 Aug 2006; Chris Bainbridge <chrb@gentoo.org> linuxspa-0.7.1.ebuild:
  stable x86

  19 May 2006; <chrb@gentoo.org> +files/linuxspa-0.7.1-compile-fix.patch,
  linuxspa-0.7.1.ebuild:
  compile fix thanks to Matheus Izvekov #133070

*linuxspa-0.7.1 (26 Oct 2005)

  26 Oct 2005; Chris Bainbridge <chrb@gentoo.org> +metadata.xml,
  +linuxspa-0.7.1.ebuild:
  This package was submitted by Chris Bainbridge
