@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX linuxspa-0.7.1-compile-fix.patch 345 RMD160 cc6ef9840ccfdf47b478e9cf0776a9a615cb734e SHA1 2b4e623098d6d656da1e4094c0afdf1db264ee37 SHA256 70a0b950f3ae5de064fb9f2654d02dd4b89f5df47e6afa5a6f057b80b30d2ceb
 DIST LinuxSPA-0.7.1.tgz 45448 RMD160 3128d43e2558082805bedbb220bcd1ac15ea985e SHA1 8ceeef96cf6b477799b61cf95595211728a47bb3 SHA256 7acef814174e2007d201f8b14a432075ede3709317c4632916dcca04187c97d1
-EBUILD linuxspa-0.7.1.ebuild 919 RMD160 11ba042950b07d84e71c3d8dcf560bb9241c5ce6 SHA1 455e0c53c120971bd58962fd656a4322d2ede7aa SHA256 d854676da0ec51f045cec564c6959d695e9628627a1b32d4951cb1b79e7a1bd5
-MISC ChangeLog 707 RMD160 f6b7bea7e372129f8dcb15eeec380a1f59d759b1 SHA1 a329d294e4204dee89f22c918a1f5413ff4b339f SHA256 746c995e78cd8a87eacfe161075ede6f7eb35ab2b7d76b104f945d3b90d3dfce
+EBUILD linuxspa-0.7.1.ebuild 899 RMD160 10e9153c6128c791e948711122d23dcd461e55ff SHA1 45bc23d4643e80e07dfdaf10f4486ca49740b247 SHA256 ed40e6498ceb9a4b2b92e147421045c486086bfb7cd5f3846619eea9f7f5b4c0
+MISC ChangeLog 813 RMD160 e759e5ceefbd4bda4d1b56963fffa315652d5aef SHA1 253fd1869d0e89efbb243ad4e2483817a07fd743 SHA256 6dad57d97c28a1ddf55864107532ebf1d54c89d5cde11bf9579ddbb3e8b57962
 MISC metadata.xml 313 RMD160 1a38b10c0546c91fd7c34f419fa8066bbc43373c SHA1 978e662147cd260c4b543f29211412e9c4dce9d7 SHA256 da5ea0ca0761d8dc189080404e540808c0f30aec9318995088a5c7db32929d1f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAklagJsACgkQKhnDs22gwa+7NwCfSamkjrpxpxQ5ZGKtAOZTj3ga
+5HYAnRX8UxDLB50SJO8Y5u/0MB90VS0Z
+=3+s0
+-----END PGP SIGNATURE-----
