@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST scope-0.04.tar.gz 69250 RMD160 6243e93921559bb4d3075eb5f3d002385b8b1396 SHA1 9cd6466777d85a41ab264f1189abb38e9f8f5c7a SHA256 cee7db04fef99e50255d6dc4e6cb3d6c87843c51868017c3a69879ce01dd7101
-EBUILD scope-0.04.ebuild 481 RMD160 eb7f3de657648df36032a8e7134b462206519096 SHA1 43572e6682426e3b53b9b6bb716a320eec336528 SHA256 b2b134ae640b5707d00564b2e17d7f90d13a21c9500a8c04f41147f179960812
-MISC ChangeLog 621 RMD160 218e0763c7ad5fb31f1bb17d4995cffb883112f4 SHA1 f7c5850504395650d90994e783a0527a37b8baa4 SHA256 a00fc9bdcad7644e8be6d30da8323bf1a7ddadb6f0125b6fa95ae7dea390d6b0
+EBUILD scope-0.04.ebuild 584 RMD160 729a82d640e4f9a7b76f69751b46f4ef222903c6 SHA1 acf7afac13016ae966af89fd3d7c12f5d4236cd4 SHA256 ada11a1ee3c58de747b3fa9696aeb8a7f94d049c748940bd5caf30538dc2f671
+MISC ChangeLog 723 RMD160 d58f3c2038dcd9edf8f9abde130aa1e18730bc32 SHA1 ba70eb2dab25c69ac78caa0da7580c34565605f2 SHA256 f2ee697c8239a302c155e9e9d82a6bfb9a5cada7b592937893606fc339ae4192
 MISC metadata.xml 303 RMD160 b6a078eeef51e149f27445e1b080d8e18febe2f5 SHA1 f4b91d6f27d91c7ee034459226207ecfd738fee5 SHA256 d8c3bb8ae60be01fcab88b2ae8e298d02473e124cf9df177bf0ae4f41a9a83ce
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAklagUcACgkQKhnDs22gwa+cNQCgrskKEmGL0D5+N6j99eWl7rWy
+8wkAniecnnQAJpmolwKkhwJLQiUH8Cm5
+=5CTm
+-----END PGP SIGNATURE-----
